experimental/internal/lexer/testdata/numbers/bad-digit.proto.stderr.txt
error: invalid digit in decimal integer literal
  --> testdata/numbers/bad-digit.proto:6:2
   |
 6 | 1a
   |  ^ expected `0` to `9`

error: invalid digit in octal integer literal
  --> testdata/numbers/bad-digit.proto:7:2
   |
 7 | 0f
   | -^ expected `0` to `7`
   | |
   | implies octal
   |
   = help: a leading `0` digit causes the whole literal to be interpreted as
           octal

error: invalid digit in binary integer literal
  --> testdata/numbers/bad-digit.proto:8:4
   |
 8 | 0b02
   | -- ^ expected `0` or `1`
   | |
   | implies binary

error: invalid digit in octal integer literal
  --> testdata/numbers/bad-digit.proto:9:4
   |
 9 | 0o08
   | -- ^ expected `0` to `7`
   | |
   | implies octal

error: invalid digit in octal integer literal
  --> testdata/numbers/bad-digit.proto:10:2
   |
10 | 08
   | -^ expected `0` to `7`
   | |
   | implies octal
   |
   = help: a leading `0` digit causes the whole literal to be interpreted as
           octal

error: invalid digit in hexadecimal integer literal
  --> testdata/numbers/bad-digit.proto:12:4
   |
12 | 0x0G
   | -- ^ expected `0` to `9`, or `a` to `f`
   | |
   | implies hexadecimal

error: invalid digit in hexadecimal floating-point literal
  --> testdata/numbers/bad-digit.proto:13:5
   |
13 | 0x1.zzz
   | --  ^ expected `0` to `9`, or `a` to `f`
   | |
   | implies hexadecimal

error: extra decimal point in floating-point literal
  --> testdata/numbers/bad-digit.proto:15:4
   |
15 | 1.2.3e456
   |  - ^
   |  |
   |  first one is here

error: non-integer exponent in floating-point literal
  --> testdata/numbers/bad-digit.proto:16:8
   |
16 | 1.23e4.56
   |        ^^ fractional part given here

error: non-integer exponent in floating-point literal
  --> testdata/numbers/bad-digit.proto:17:9
   |
17 | 1.23e456.
   |         ^ fractional part given here

encountered 10 errors
